--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>O</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Buat Bocil kesayangan aku!!</span>
     </div>
     <div class="button">
         <button>
